Re-fix the header clipping bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,7 +44,8 @@ h3 {
 /** Header **/
 
 header {
-  margin: 3em 0 3em -5em;
+  margin: 0 0 3em -5em;
+  padding-top: 3em;
   overflow: hidden;
   
   img {
